--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,6 +100,8 @@
     "numbers": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "fstream": "cpp",
+    "sstream": "cpp"
   }
 }
