Adding files I/O lab

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,6 +102,8 @@
     "streambuf": "cpp",
     "typeinfo": "cpp",
     "fstream": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "ctime": "cpp",
+    "iomanip": "cpp"
   }
 }
