Adding CPP Session 07 lab

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,6 +104,7 @@
     "fstream": "cpp",
     "sstream": "cpp",
     "ctime": "cpp",
-    "iomanip": "cpp"
+    "iomanip": "cpp",
+    "cinttypes": "cpp"
   }
 }
