Adding Ycoto build recipe readme file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,6 +120,16 @@
     "module.h": "c",
     "init.h": "c",
     "proc_fs.h": "c",
-    "compiler.h": "c"
-  }
+    "compiler.h": "c",
+    "*.conf": "bitbake",
+    "*.inc": "bitbake"
+  },
+  "python.autoComplete.extraPaths": [
+    "${workspaceFolder}/sources/poky/bitbake/lib",
+    "${workspaceFolder}/sources/poky/meta/lib"
+  ],
+  "python.analysis.extraPaths": [
+    "${workspaceFolder}/sources/poky/bitbake/lib",
+    "${workspaceFolder}/sources/poky/meta/lib"
+  ]
 }
