--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -126,10 +126,12 @@
   },
   "python.autoComplete.extraPaths": [
     "${workspaceFolder}/sources/poky/bitbake/lib",
-    "${workspaceFolder}/sources/poky/meta/lib"
+    "${workspaceFolder}/sources/poky/meta/lib",
+    "${workspaceFolder}\\sources\\poky\\meta\\lib"
   ],
   "python.analysis.extraPaths": [
     "${workspaceFolder}/sources/poky/bitbake/lib",
-    "${workspaceFolder}/sources/poky/meta/lib"
+    "${workspaceFolder}/sources/poky/meta/lib",
+    "${workspaceFolder}\\sources\\poky\\meta\\lib"
   ]
 }
